# BikeWatch

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: container_deployment.yml  ruff.yml
backend/: pyproject.toml
backend/src/: main.py  telegram_bot.py
backend/src/routes/: alerts.py  listings.py
bot/: pyproject.toml
bot/src/: alert_handlers.py  alert_listener.py  constants.py  conversation_handlers.py  handlers.py  main.py
bot/src/handlers/: conv_handlers.py
common/: pyproject.toml
common/alembic/versions/: 0294a402e296_add_category_property.py  6f3f7420df48_create_bike_and_bike_image_tables.py  7e03de24a0ca_add_bike_size_type_column.py  9b1716b0ce95_create_tables_for_alerts.py
common/src/common/: __init__.py  models.py
common/src/common/database/: __init__.py  db.py  redis_client.py
common/src/common/models/: __init__.py  alert.py  bike_image.py  bike_listing.py
common/src/common/schemas/: __init__.py  bike_listing.py  user_alert.py
data/: models.py
docker/: Dockerfile.backend  Dockerfile.bot  Dockerfile.scraper  docker-compose.yaml  entrypoint-scraper.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: constants.ts  index.css  main.tsx  types.ts
scraper/: Dockerfile  alembic.ini  parsing.py  pyproject.toml  request_throttler.py  scraper.py
scraper/alembic/: env.py
scraper/alembic/versions/: 9b1716b0ce95_create_tables_for_alerts.py
scraper/src/: alerting.py  db_operations.py  main.py  parsing.py  request_throttler.py  scraping.py  urls.py
scraper/src/scraping/: parse_size.py  parsing.py  request_throttler.py  scraper.py
scraper/src/utils/: db_operations.py
scraper/tests/: test_parsing.py  test_scraping.py  test_urls.py
scraper_old/: Dockerfile  main.py  pyproject.toml
scraper_old/data/: models.py
scraper_old/scraping/: scraper.py
server/: Dockerfile  multistage.Dockerfile  pyproject.toml
server/src/: main.py
(+18 files in other folders)
