[project]
name = "bike-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["common", "backend", "scraper"]
