[project]
name = "bikewatch-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot>=21.10.0",
  "python-dotenv>=1.0.1",
  "redis>=5.2.0",
  "common",
]

[tool.uv.sources]
common = { path = "../common" }
