[project]
name = "bikewatch-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
  "alembic>=1.14.0",
  "redis>=5.2.0",
  "common",
]

[tool.uv.sources]
common = { path = "../common" }
